--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
       font-weight: 1100;
   }
   .text-highlight{
-      color:#182C61
+      color:rgb(52, 139, 221);
   }
   .half-width{
     width: 40%;
@@ -44,7 +44,7 @@ body{
       text-decoration: none;
       padding: 10px 15px;
       border-radius: 10px;
-      background-image: linear-gradient(60deg, blue, cyan);
+      background-image: linear-gradient(60deg, rgb(40, 118, 190),  cyan);
   }
   .section-two{
       height: 500px;
@@ -85,7 +85,7 @@ body{
     text-decoration: none;
     padding: 10px 15px;
     border-radius: 10px;
-    background-image: linear-gradient(60deg, rgb(248, 149, 36), rgb(236, 137, 56));
+    background-image: linear-gradient(60deg, rgba(40, 93, 190, 0.863),  rgba(225, 0, 255, 0.486));
   }
   .footer-div{
       width: 30%;
@@ -100,3 +100,4 @@ body{
       margin-left: 7rem;
       font-weight: 800;
   }
+  
